# qaz-law

./: .gitignore  README.md  cli.py  compose.yml  pyproject.toml
tools/zangov/: client.py  enums.py  ingest_pg.py  llm.py  md.py  models.py  schemas.py
tools/zangov/examples/: get-document-versions.md  get-document.md
