[project]
name = "qaz-law"
version = "0.1.0"
description = "An attempt to version control the Code of the Republic of Qazaqstan"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "htbuilder>=0.9.0",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.5",
    "markdownify>=1.2.2",
    "marvin>=3.2.6",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "sqlmodel>=0.0.33",
    "tzdata>=2025.3",
]
